--- a/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
@@ -11,6 +11,7 @@
 
     <fieldset>
         <legend>Edit Information for Village Saving and Lending Information</legend>
+          @Html.HiddenFor(model => model.VslaId);
         <div class="form-group">
             <div class="editor-label">
                 @Html.LabelFor(model => model.VslaCode)
