--- a/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
@@ -54,10 +54,7 @@
             <div class="editor-field">
                @* @Html.EditorFor(model => model.UserLevel)
                 @Html.ValidationMessageFor(model => model.UserLevel)*@
-                <select id="user_level">
-                    <option value="1">Administrator</option>
-                    <option value="2">User</option>
-                </select>
+                @Html.DropDownList("Level_Id", Model.AccessLevel, new { @style = "width:250px; height:30px;" })
             </div>
         </div>
         <div class="form-group">
