--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
@@ -31,14 +31,14 @@
             @Html.DisplayFor(model => model.Email)
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         <div class="display-label">
             @Html.DisplayNameFor(model => model.Password)
         </div>
         <div class="display-field">
             @Html.DisplayFor(model => model.Password)
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         <div class="display-label">
             @Html.DisplayNameFor(model => model.UserLevel)
